[package]
name = "opencalc"
version = "0.1.0"
authors = ["Afront <3943720+Afront@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["num"]
# cortex-m-s = ["cortex-m", "cortex-m-rt", "cortex-m-semihosting", "embedded-graphics", "panic-halt"] # or no_std
x86_64 = ["ramp"]
no_std = [""]

[dependencies]
num = {version = "0.2", default-features = false}
# optional

# embedded
# cortex-m
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
cortex-m-semihosting = "0.3.5"
embedded-graphics = "0.5.2"
panic-halt = "0.2.0"


# standard?
ramp = "0.5.4"
